Updated cave maps / layout bug
- cave maps are now fit into layout better
- removed map references to vanilla DW
- fixed general layout inconsistency in Firefox

--- a/DWRandomizerTracker/style.css
+++ b/DWRandomizerTracker/style.css
@@ -2,12 +2,12 @@
 
 body{
 	font-family: 'Press Start 2P', Arial black;
-  background-color: #737373;
-  background-image: url("img/dw1-titleback.png");
+	background-color: #737373;
+	background-image: url("img/dw1-titleback.png");
 	background-size: 32px;
-  image-rendering: pixelated;
-  color: #fff;
-  position: relative;
+	image-rendering: pixelated;
+	color: #fff;
+	position: relative;
 	padding: 1em;
 	display: flex;
 	flex-direction: column;
@@ -78,7 +78,7 @@ font-family: 'Press Start 2P', Arial black;
 #title{
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 	flex-direction: column;
 	background-color: #d82800;
   background-image: url("img/brick.png");
@@ -87,7 +87,6 @@ font-family: 'Press Start 2P', Arial black;
 	}
 
 #title h1, #title h2, #title h3{
-	flex:1;
 	text-align: center;
 }
 
@@ -189,6 +188,10 @@ hr{
   justify-content:space-between;
 }
 
+#text-contain{
+	height: 227px;
+}
+
 #icons-items, #icons-apdp{
   display:flex;
   flex-flow: column wrap;
@@ -203,17 +206,15 @@ hr{
 }
 
 #spell-contain{
+	font-size: 16px;
   font-weight: bold;
-	text-transform: uppercase;
+  text-transform: uppercase;
   letter-spacing: 1px;
-  padding: 0 4px;
   list-style-type: none;
-  height: 90%;
   padding: 0 4px;
-}
-
-#spell-contain li:not(:last-of-type){  
-  margin-bottom: 8px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 #spell-contain .single{
@@ -517,7 +518,7 @@ table{
 }
 
 #coordinates{
-	padding-top: 16px;
+	padding-top: 8px;
 	position: relative;
 }
 
@@ -626,11 +627,11 @@ table{
 #chests-contain div{
   padding: 4px;
   text-align: center;
-	border: 1px solid rgba(255,255,255,.2);
+  border: 1px solid rgba(255,255,255,.2);
 }
 
 #chests-contain div div {
-  border: 1px solid rgba(255,255,255,.2);
+  border: none;
 }
 
 #chests-contain img{
@@ -730,8 +731,35 @@ border-bottom: 3px solid #000;
 	border-bottom: 3px solid;
 }
 .cave-pane{
-	overflow: scroll;
+	overflow: auto;
 	height: 339px;
+}
+
+.basement-maps article{
+  margin-top: 16px;
+  position: relative;
+  z-index:0;
+  margin-bottom: 32px;
+}
+
+.basement-maps h3{
+  padding: 8px;
+  margin-bottom: 16px;
+  background-color: #d82800;
+}
+
+.basement-maps h3 img{
+	height: 24px;
+	width: auto;
+	box-shadow: none;
+	background: none;
+}
+
+.basement-maps img{
+  xwidth:192px;
+  background-color: red;
+  box-shadow: 16px 16px #737373;
+  margin-left: 16px;
 }
 
 #monsters-grind{
